Implemented redirect for not found paths

--- a/404.html
+++ b/404.html
@@ -8,6 +8,11 @@ permalink: /404.html
     <style></style>
   </head>
   <body>
-    <h1>This is a test</h1>
+    <h1>Not found. Redirecting...</h1>
+    <script>
+      window.onload = function() {
+        window.location.href = "https://anfe0690.github.io";
+      }
+    </script>
   </body>
 </html>
