--- a/404.html
+++ b/404.html
@@ -1,18 +1,27 @@
 ---
 permalink: /404.html
 ---
-<html>
+<html lang="en">
+
   <head>
+    <meta charset="utf-8" />
+
     <title>Andres Muñoz</title>
-    <meta content="">
-    <style></style>
-  </head>
-  <body>
-    <h1>Not found. Redirecting...</h1>
+
     <script>
-      window.onload = function() {
-        window.location.href = "https://anfe0690.github.io";
-      }
+      sessionStorage.redirect = location.href;
     </script>
+
+    <meta http-equiv="refresh" content="0;URL='/'">
+  </head>
+
+  <body>
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   </body>
+
 </html>
